[package]
name = "game_bloc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = "0.8.1"
ic-websocket-cdk = "0.3.2"
ic_principal = "0.1.1"
candid = "0.10.9"
ic-cdk = "0.12.2"
ic-cdk-timers = "0.1"
ic-stable-structures = "0.6.0"# Feel free to remove this dependency if you don't need timers
canister-tools = "0.2.3"
serde = { version = "1.0.193", features = []}
serde_bytes = "0.11.13"
